Fix unnecessary line-break between marker and overflow element.

In order to show marker in list with overflow children, we make marker as
the child of list. This change will generate line-break between marker
and overflow children. To eliminame this line-break:
1. When construct layout tree add marker as child of li which would
generate line-break.
2. To eliminame line-break, set marker_container's logicalHeight to
0px.
3. Align marker's block direction position according to first-line-box
after li's children layouted.

Design document:
https://docs.google.com/document/d/1bMerTLCSqHZYAERJ2HDr-4auOSw0eIx8QfD2vY92TNo

Bug: 775880, 767408, 344941
Change-Id: I323be3fdd9447c5487963cb039c7bcc83922dcb8