third_party/WebKit/Source/core/layout/LayoutListItem.cpp
@@ -38,7 +38,9 @@ namespace blink {
 using namespace HTMLNames;
 
 LayoutListItem::LayoutListItem(Element* element)
-    : LayoutBlockFlow(element), marker_(nullptr) {
+    : LayoutBlockFlow(element),
+      marker_(nullptr),
+      need_block_direction_align_(false) {
   SetInline(false);
 
   SetConsumesSubtreeChangeNotification();
@@ -128,11 +130,6 @@ static LayoutObject* GetParentOfFirstLineBox(LayoutBlockFlow* curr,
     if (curr_child == marker)
       continue;
 
-    // Shouldn't add marker into Overflow box, instead, add marker
-    // into listitem
-    if (curr->HasOverflowClip())
-      break;
-
     if (curr_child->IsInline() &&
         (!curr_child->IsLayoutInline() ||
          curr->GeneratesLineBoxesForInlineChild(curr_child)))
@@ -166,6 +163,51 @@ static LayoutObject* FirstNonMarkerChild(LayoutObject* parent) {
   return result;
 }
 
+bool LayoutListItem::DealWithOverflow(const LayoutObject* line_box_parent) {
+  LayoutObject* marker_parent = marker_->Parent();
+  // Deal with the situation of layout tree changed.
+  if (marker_parent && marker_parent->IsAnonymous()) {
+    if (marker_->NextSibling()) {
+      // Restore old marker_container logicalHeight.
+      if (marker_parent->MutableStyleRef().LogicalHeight().IsZero()) {
+        marker_parent->MutableStyleRef().SetLogicalHeight(
+            Style()->LogicalHeight());
+      }
+
+      // If marker_parent isn't the ancestor of line_box_parent, marker might
+      // generate a new empty line. We need to remove marker here.E.g:
+      // <li><span><div>text<div><span></li>
+      if (line_box_parent && !line_box_parent->IsDescendantOf(marker_parent)) {
+        marker_->Remove();
+        marker_parent = nullptr;
+      }
+    } else {
+      if (line_box_parent)
+        marker_parent->MutableStyleRef().SetLogicalHeight(Length(0, kFixed));
+    }
+  }
+
+  // Create marker_container, set its height to 0px, and add it to li.
+  if (!marker_parent) {
+    LayoutObject* before_child = FirstNonMarkerChild(this);
+    if (before_child && before_child->IsLayoutBlock()) {
+      // Create marker_container and set its logicalHeight to 0px.
+      LayoutBlock* marker_container = CreateAnonymousBlock();
+      if (line_box_parent)
+        marker_container->MutableStyleRef().SetLogicalHeight(Length(0, kFixed));
+      marker_container->AddChild(marker_,
+                                 FirstNonMarkerChild(marker_container));
+      this->AddChild(marker_container, before_child);
+    } else {
+      this->AddChild(marker_, before_child);
+    }
+
+    marker_->UpdateMarginsAndContent();
+    return true;
+  }
+  return false;
+}
+
 bool LayoutListItem::UpdateMarkerLocation() {
   DCHECK(marker_);
 
@@ -174,6 +216,13 @@ bool LayoutListItem::UpdateMarkerLocation() {
   // position:static element that should be attached to LayoutListItem block.
   LayoutObject* line_box_parent =
       marker_->IsInside() ? this : GetParentOfFirstLineBox(this, marker_);
+
+  if (!marker_->IsInside() && line_box_parent &&
+      line_box_parent->HasOverflowClip())
+    need_block_direction_align_ = true;
+  if (need_block_direction_align_)
+    return DealWithOverflow(line_box_parent);
+
   if (!line_box_parent) {
     // If the marker is currently contained inside an anonymous box, then we
     // are the only item in that anonymous box (since no line box parent was
@@ -203,6 +252,49 @@ void LayoutListItem::AddOverflowFromChildren() {
   PositionListMarker();
 }
 
+void LayoutListItem::AlignMarkerInBlockDirection() {
+  RootInlineBox& root = marker_->InlineBoxWrapper()->Root();
+  LayoutObject* line_box_parent = GetParentOfFirstLineBox(this, marker_);
+  if (line_box_parent && line_box_parent->IsLayoutBlockFlow()) {
+    LayoutBlockFlow* line_box_parent_block = ToLayoutBlockFlow(line_box_parent);
+    RootInlineBox* line_box_root = line_box_parent_block->FirstRootBox();
+    if (line_box_root && line_box_root != &root) {
+      // Position marker in block direction.
+      const SimpleFontData* line_box_font_data =
+          line_box_root->GetLineLayoutItem()
+              .Style(true)
+              ->GetFont()
+              .PrimaryFont();
+      if (line_box_font_data) {
+        const FontMetrics& line_box_font_metrics =
+            line_box_font_data->GetFontMetrics();
+        LayoutUnit offset =
+            line_box_root->LogicalTop() +
+            line_box_font_metrics.Ascent(line_box_root->BaselineType());
+        for (LayoutBox* o = line_box_parent_block; o != this;
+             o = o->ParentBox()) {
+          offset += o->LogicalTop();
+        }
+
+        const SimpleFontData* marker_font_data =
+            marker_->Style(true)->GetFont().PrimaryFont();
+        if (marker_font_data) {
+          const FontMetrics& marker_font_metrics =
+              marker_font_data->GetFontMetrics();
+          offset -= marker_font_metrics.Ascent(root.BaselineType());
+        }
+        for (LayoutBox* o = marker_->ParentBox(); o != this;
+             o = o->ParentBox()) {
+          offset -= o->LogicalTop();
+        }
+        offset -= marker_->InlineBoxWrapper()->LogicalTop();
+
+        marker_->InlineBoxWrapper()->MoveInBlockDirection(offset);
+      }
+    }
+  }
+}
+
 void LayoutListItem::PositionListMarker() {
   if (marker_ && marker_->Parent() && marker_->Parent()->IsBox() &&
       !marker_->IsInside() && marker_->InlineBoxWrapper()) {
@@ -221,6 +313,9 @@ void LayoutListItem::PositionListMarker() {
 
     LayoutUnit line_top = root.LineTop();
     LayoutUnit line_bottom = root.LineBottom();
+
+    if (need_block_direction_align_)
+      AlignMarkerInBlockDirection();
 
     // TODO(jchaffraix): Propagating the overflow to the line boxes seems
     // pretty wrong (https://crbug.com/554160).
